force-app/main/default/objects/Lead/fields/Budget_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Budget_Constraints__c</fullName>
    <description>this field gives information about the budget constraints</description>
    <label>Budget Constraints</label>
    <type>TextArea</type>
</CustomField>