force-app/main/default/objects/Lead/fields/Budget_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Expiry_Date__c</fullName>
    <description>Expiry date of budget allocation</description>
    <label>Budget Expiry Date</label>
    <type>Date</type>
</CustomField>