force-app/main/default/objects/Lead/fields/Budget_Flexibility__c.field-meta.xml
<CustomField>
    <fullName>Budget_Flexibility__c</fullName>
    <description>This field tells whether budget has flexibility or not</description>
    <label>Budget Flexibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>