force-app/main/default/objects/Lead/fields/Drop_Reason__c.field-meta.xml
<CustomField>
    <fullName>Drop_Reason__c</fullName>
    <description>reasons of drop in the business</description>
    <label>Drop Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junk Data</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>