force-app/main/default/objects/Lead/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>Expected close date of a lead</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>