force-app/main/default/objects/Lead/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <description>This field is to track calls in the particular lead.</description>
    <label>Number of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>