force-app/main/default/objects/Lead/fields/Number_of_Emails__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails__c</fullName>
    <description>This field is to track number of emails to a particular lead</description>
    <label>Number of Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>