force-app/main/default/objects/Lead/fields/Recycle_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycle_Reason__c</fullName>
    <label>Recycle Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to connect</fullName>
            </value>
            <value>
                <fullName>No Product Fit</fullName>
            </value>
            <value>
                <fullName>Internal Politics</fullName>
            </value>
            <value>
                <fullName>Doing Research</fullName>
            </value>
            <value>
                <fullName>Not Required Today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>