force-app/main/default/objects/Lead/recordTypes/Marketing.recordType-meta.xml
<RecordType>
    <fullName>Marketing</fullName>
    <active>true</active>
    <businessProcess>Marketing</businessProcess>
    <description>This is for marketing users</description>
    <label>Marketing</label>
</RecordType>